// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLinks authed Sourcegraph.com /foo 1`] = `
Array [
  "Search /search",
  "Welcome /welcome",
  "WebActionsNavItems",
  "Explore /explore",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed Sourcegraph.com /search 1`] = `
Array [
  "Welcome /welcome",
  "WebActionsNavItems",
  "Explore /explore",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed Sourcegraph.com /welcome 1`] = `
Array [
  "Docs https://docs.sourcegraph.com",
  "WebActionsNavItems",
  "Explore /explore",
  "UserNavItem",
]
`;

exports[`NavLinks authed self-hosted /foo 1`] = `
Array [
  "Search /search",
  "WebActionsNavItems",
  "Explore /explore",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed self-hosted /search 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed self-hosted /welcome 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "UserNavItem",
]
`;

exports[`NavLinks unauthed Sourcegraph.com /foo 1`] = `
Array [
  "Search /search",
  "Welcome /welcome",
  "WebActionsNavItems",
  "Explore /explore",
  "Extensions /extensions",
  "Sign in /sign-in",
  "About https://about.sourcegraph.com",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed Sourcegraph.com /search 1`] = `
Array [
  "Welcome /welcome",
  "WebActionsNavItems",
  "Explore /explore",
  "Extensions /extensions",
  "Sign in /sign-in",
  "About https://about.sourcegraph.com",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed Sourcegraph.com /welcome 1`] = `
Array [
  "Docs https://docs.sourcegraph.com",
  "WebActionsNavItems",
  "Sign in /sign-in",
  "About https://about.sourcegraph.com",
]
`;

exports[`NavLinks unauthed self-hosted /foo 1`] = `
Array [
  "Search /search",
  "WebActionsNavItems",
  "Explore /explore",
  "Extensions /extensions",
  "Sign in /sign-in",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed self-hosted /search 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "Extensions /extensions",
  "Sign in /sign-in",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed self-hosted /welcome 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "Sign in /sign-in",
]
`;
